[project]
name = "reasonforge"
version = "0.1.0"
description = "Deterministic math tools for small language models via MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gradio>=6.0",
    "requests>=2.31.0",
    "sympy>=1.13.0",
]

[project.optional-dependencies]
benchmark = [
    "datasets>=4.6.1",
    "math-verify[antlr4_13_2]>=0.9.0",
]
